# futtetennista.github.io

./: .dockerignore  .gitignore  .gitmodules  CNAME  Dockerfile  LICENSE.html  Makefile  about.html  archive.html  atom.xml  circle.yml  contact.html  custom_dict  feed.xml  futtetennismo.cabal  imprint.html  index.html  keybase.txt  robots.txt  site.hs  sitemap.xml  stack.yaml
.circleci/: config.yml
_sass/: _base.scss  _lib.scss
blog/archives/: index.html
categories/: algorithms-and-data-structures.html  android.html  archive.html  docker.html  hakyll.html  haskell.html  k8s.html  postgresql.html
css/: main.css  main.scss
drafts/: functional-graphs.markdown  job-interviewing.markdown
futtetennismo/: futtetennismo.cabal  site.hs
futtetennismo/_site/: about.html  contact.html
futtetennismo/css/: default.scss
futtetennismo/posts/: 2017-10-14-strictness.markdown  2017-10-21-lazy-io-to-conduit.lhs
futtetennismo/templates/: default.html  footer.html  head.html
images/: inductive_graphs.xml
js/: init.js
pages/: about.markdown  imprint.markdown  index.html
partials/: footer.html  head.html  navbar.html  post-list.html  post-lists.html
posts/: 2017-10-14-strictness.markdown  2017-10-21-lazy-io-to-conduit.lhs
site/: futtetennismo.hs  spellcheck.hs
stylesheets/: screen.css
tags/: android+kitkat.html  android.html  archive.html  chromium.html  circleci.html  conduit.html  databases.html  docker.html  espresso.html  ghci.html  graphs.html  hakyll.html  haskell.html  ignition.html  k8s.html  lazy+evaluation.html  lazy+io.html  legacy.html  location.html  postgres.html  postgresql.html  qype.html  real+world+haskell.html  seo.html  snippet.html  testing.html  titbit.html  webview.html
templates/: default.html  head.html  post.html  tag.html
test/: Test.hs
(+75 files in other folders)
