name:               futtetennismo
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , bytestring == 0.10.8.*
                  , containers == 0.5.7.*
                  , stm == 2.4.4.*
                  , mtl == 2.2.*
                  , conduit-combinators == 1.1.*
                  , hakyll-sass == 0.2.*
  ghc-options:      -threaded
  default-language: Haskell2010

test-suite site-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , text == 1.2.2.*
                     , HUnit == 1.5.0.0
                     , turtle == 1.3.*
                     , foldl == 1.2.*
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
  default-language:    Haskell2010
